; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk_constraint.c_chunk_constraint_insert.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk_constraint.c_chunk_constraint_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CHUNK_CONSTRAINT = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @chunk_constraint_insert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chunk_constraint_insert(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = call i32* (...) @ts_catalog_get()
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* @CHUNK_CONSTRAINT, align 4
  %9 = call i32 @catalog_get_table_id(i32* %7, i32 %8)
  %10 = load i32, i32* @RowExclusiveLock, align 4
  %11 = call i32 @heap_open(i32 %9, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = call i32 (...) @ts_catalog_database_info_get()
  %13 = call i32 @ts_catalog_database_info_become_owner(i32 %12, i32* %4)
  %14 = load i32, i32* %5, align 4
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @chunk_constraint_insert_relation(i32 %14, i32* %15)
  %17 = call i32 @ts_catalog_restore_user(i32* %4)
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @RowExclusiveLock, align 4
  %20 = call i32 @heap_close(i32 %18, i32 %19)
  ret void
}

declare dso_local i32* @ts_catalog_get(...) #1

declare dso_local i32 @heap_open(i32, i32) #1

declare dso_local i32 @catalog_get_table_id(i32*, i32) #1

declare dso_local i32 @ts_catalog_database_info_become_owner(i32, i32*) #1

declare dso_local i32 @ts_catalog_database_info_get(...) #1

declare dso_local i32 @chunk_constraint_insert_relation(i32, i32*) #1

declare dso_local i32 @ts_catalog_restore_user(i32*) #1

declare dso_local i32 @heap_close(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
